--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,50 @@ body {
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
 }
+
+/* Card Flipping */
+.flipContainer {
+    width: 160px;
+    height: 200px;
+    cursor: pointer;
+}
+
+.flip {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    font-size: 50px;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transition: all 600ms;
+    transition: all 600ms;
+    z-index: 20;
+    border: 1px solid #000;
+}
+
+.flip div {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: #FFB;
+    text-align: center;
+    line-height: 200px;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border-radius: 2px;
+}
+
+.flip .flipBack {
+    background: rgb(5, 209, 66);
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+}
+
+#flip {
+    display: none;
+}
+
+:checked + .flip {
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+}
