--- a/styles.css
+++ b/styles.css
@@ -67,3 +67,20 @@ body {
     transform: rotateY(180deg);
     -webkit-transform: rotateY(180deg);
 }
+
+
+.nameInput {
+    width: 400px;
+}
+
+.storyPointInput {
+    width: 100px;
+}
+
+.teammitglied {
+    margin-bottom: 5px;
+}
+
+.totalStoryPoints {
+    font-weight: bold;
+}
