--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,16 @@
-/* Constant size for logo set here */
+/* 
+Author: Niklas Kaesler
+Version: 1.3
+Last Updated: 26.11.2018
+*/
+
+/* Constant size for logo set here
+-------------------------------------------------- */
 img {
   height: 30px;
   width: 30px;
 }
+/* END Constant size for logo set here */
 
 /* Sticky footer styles
 -------------------------------------------------- */
@@ -22,11 +30,12 @@ body {
   background-color: #f5f5f5;
 }
 
-/* Card Flipping animation */
+/* Card Flipping animation
+-------------------------------------------------- */
 .flipContainer {
   width: 160px;
   height: 200px;
-  cursor: pointer; /* so usr knows that it is clickable */
+  cursor: pointer; /* so user knows that it is clickable */
 }
 
 .flip {
@@ -68,7 +77,10 @@ body {
   transform: rotateY(180deg); /* Turn card 180° */
   -webkit-transform: rotateY(180deg); /* Turn card 180° */
 }
+/* END Card Flipping animation */
 
+/* Scrum Master Ansicht Styles
+-------------------------------------------------- */
 .nameInput {
   height: 50px;
   width: 400px;
@@ -96,11 +108,21 @@ body {
   width: 100px;
 }
 
-/* IMPORTANT, otherwise, pdf background is black */
-#tableContainer {
-  background-color: white;
+#ausWahlAnzeigen {
+  visibility: hidden;
 }
+/* END Scrum Master Ansicht Styles */
 
+/* PDF Export
+-------------------------------------------------- */
+#tableContainer {
+  background-color: white; /* IMPORTANT, otherwise, pdf background is black */
+}
+/* END PDF Export */
+
+
+/* Create and join room styles
+-------------------------------------------------- */
 #nameBlock {
   margin-top: 60px;
 }
@@ -184,12 +206,12 @@ body {
   display: block;
 }
 
-#ausWahlAnzeigen {
-  visibility: hidden;
-}
+/* END Create and join room styles */
 
+/* Graph styles
+-------------------------------------------------- */
 canvas {
-  width: 70vw;
+  width: 70vw; /* IMPORTANT: otherwise graph too big */
   height: auto;
 }
 
@@ -198,3 +220,4 @@ canvas {
   width: 100px;
   height: 100px;
 }
+/* END Graph styles */
